--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,5 @@ dv-utils
 pandas
 openpyxl
 delta_sharing @ git+https://github.com/delta-io/delta-sharing@main#&subdirectory=python
-xgboost
-scikit-learn
-
+fastapi
+uvicorn
