feat: bump dv-utils

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 #take dv-utils either from github or from pypi
 #git+https://github.com/datavillage-me/dv-utils@main#egg=dv-utils
-dv-utils
+dv-utils>=0.2.1
 pandas
 openpyxl
 delta_sharing @ git+https://github.com/delta-io/delta-sharing@main#&subdirectory=python
